@@ -1,3 +1,10 @@
+2009-07-20 Gonzalo Paniagua Javier <gonzalo@novell.com>
+
+	* Makefile.am: replaced zlib_macros.c with zlib-helper.c
+	* zlib_macros.c: Removed file.
+	* zlib-helper.c: new interface for DeflateStream. Flush() actually
+	does something.
+
 2009-04-13  Jonathan Pryor  <jpryor@novell.com>
 
 	* sys-time.c: Properly set the modification time, instead of using the
